@@ -25,6 +25,8 @@
 void _gcry_random_initialize (void);
 void _gcry_register_random_progress (void (*cb)(void *,const char*,int,int,int),
                                      void *cb_data );
+void _gcry_random_progress (const char *what, int printchar,
+                            int current, int total);
 void _gcry_random_dump_stats(void);
 void _gcry_secure_random_alloc(void);
 int  _gcry_quick_random_gen( int onoff );
